--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 logging.level.guru=debug
 
 server.port=8082
+
+# activemq message broker, defaults for docker image vromero/activemq-artemis
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
